@@ -339,18 +339,51 @@ epTeX_input_encoding_code:@<Implement \.{\\epTeXinputencoding}@>;
 @x
 @ @<Finish the extensions@>=
 @y
-@ @<Implement \.{\\epTeXinputencoding}@>=
-  begin
-    scan_file_name;
-    pack_cur_name;
-    if setinfileenc(input_file[in_open],stringcast(name_of_file+1)) = false then
-    begin
-      wlog_cr;
-      wlog('Unknown encoding `');
-      fputs(stringcast(name_of_file + 1), log_file);
-      wlog('''');
+@ @<Declare procedures needed in |do_ext...@>=
+procedure eptex_set_input_encoding;
+var j,k:integer;
+begin
+  scan_file_name;
+  pack_cur_name;
+  if state=token_list then
+    begin k:=input_ptr-1; j:=-1;
+    while k>=0 do
+      begin if input_stack[k].state_field=token_list then decr(k)
+      else if input_stack[k].name_field>19 then
+        begin j:=input_stack[k].index_field; k:=-1; end
+      else begin j:=-(name+1); k:=-1; end
+      end
     end
-  end
+  else if name>19 then j:=index else j:=-(name+1);
+  if (j>=0) or (j=-1) or (j=-18) then begin
+    k:=true;
+    if j>= 0 then k:=setinfileenc(input_file[j],stringcast(name_of_file+1))
+    else k:=setstdinenc(stringcast(name_of_file+1));
+    if k = false then
+      begin begin_diagnostic;
+      print_nl("Unknown encoding `");
+      case selector of
+      term_and_log: begin wterm(stringcast(name_of_file + 1));
+	wlog(stringcast(name_of_file + 1)); end;
+      log_only:  wlog(stringcast(name_of_file + 1));
+      term_only: wterm(stringcast(name_of_file + 1));
+      endcases;
+      print("'"); end_diagnostic(false);
+      end
+    end
+  else
+    begin begin_diagnostic; j:=-j-1;
+    print_ln;
+    print_nl("Warning: \epTeXinputencoding is ignored, since I am current reading");
+    print_nl("from ");
+    if j>=18 then print("a pseudo file created by \scantokens.")
+    else begin print("input stream "); print_int(j); print("."); end;
+    end_diagnostic(false);
+    end
+end;
+
+@ @<Implement \.{\\epTeXinputencoding}@>=
+eptex_set_input_encoding
 
 @ @<Finish the extensions@>=
 @z
