@@ -1,3 +1,8 @@
+2017-09-09  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
+
+	* ptexenc.c, ptexenc/ptexenc.h: Add a new function setstdinenc() for the
+	primitive \epTeXinputencoding in e-(u)pTeX.
+
 2017-03-18  Karl Berry  <karl@tug.org>
 
 	* version.ac (ptexenc_version): 1.3.5dev => 1.3.5 for TL17.
